name:                hakyll-elm
version:             0.1.0.0
synopsis:            Wrappers for using Elm to make pages for a Hakyll site
homepage:            https://github.com/maxsnew/hakyll-elm
license:             BSD3
license-file:        LICENSE
author:              Max New
maintainer:          maxsnew@gmail.com
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  -- Modules exported by the library.
  exposed-modules:     Hakyll.Web.Elm
  build-depends:       base         >= 4.6 && < 4.7,
                       hakyll       >= 4.0 && < 4.5,
                       Elm          >= 0.9 && < 0.11,
                       mtl          >= 1.0 && < 3.0,
                       blaze-html   >= 0.4 && < 0.7,
                       blaze-markup >= 0.5 && < 0.6
  -- Base language which the package is written in.
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
